Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------

state 27 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Exp                               (0)
	Exp -> '<' ident ':' ident Attributes '/' '>'      (1)
	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>'   (2)
	Exprs ->                                           (3)
	Exprs -> Exprs Exp                                 (4)
	Attribute -> ident '=' '"' ident '"'               (5)
	Attributes ->                                      (6)
	Attributes -> Attributes Attribute                 (7)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { TATOM _ $$ }
	'<'            { TOPEN _ }
	'>'            { TCLOSE _ }
	'/'            { TSLASH _ }
	'"'            { TQUOTE _ }
	'='            { TEQ _ }
	':'            { TCOLON _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Exp             rules 1, 2
	Exprs           rules 3, 4
	Attribute       rule  5
	Attributes      rules 6, 7

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'<'            shift, and enter state 4

	Exp            goto state 3

State 1


	'<'            shift, and enter state 2


State 2

	Exp -> '<' . ident ':' ident Attributes '/' '>'     (rule 1)

	ident          shift, and enter state 6


State 3

	%start_parser -> Exp .                              (rule 0)

	%eof           accept


State 4

	Exp -> '<' . ident ':' ident Attributes '/' '>'     (rule 1)
	Exp -> '<' . ident ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)

	ident          shift, and enter state 5


State 5

	Exp -> '<' ident . ':' ident Attributes '/' '>'     (rule 1)
	Exp -> '<' ident . ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)

	':'            shift, and enter state 8


State 6

	Exp -> '<' ident . ':' ident Attributes '/' '>'     (rule 1)

	':'            shift, and enter state 7


State 7

	Exp -> '<' ident ':' . ident Attributes '/' '>'     (rule 1)

	ident          shift, and enter state 10


State 8

	Exp -> '<' ident ':' . ident Attributes '/' '>'     (rule 1)
	Exp -> '<' ident ':' . ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)

	ident          shift, and enter state 9


State 9

	Exp -> '<' ident ':' ident . Attributes '/' '>'     (rule 1)
	Exp -> '<' ident ':' ident . Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)

	ident          reduce using rule 6
	'>'            reduce using rule 6
	'/'            reduce using rule 6

	Attributes     goto state 12

State 10

	Exp -> '<' ident ':' ident . Attributes '/' '>'     (rule 1)


	Attributes     goto state 11

State 11

	Exp -> '<' ident ':' ident Attributes . '/' '>'     (rule 1)
	Attributes -> Attributes . Attribute                (rule 7)

	ident          shift, and enter state 14
	'/'            shift, and enter state 16

	Attribute      goto state 13

State 12

	Exp -> '<' ident ':' ident Attributes . '/' '>'     (rule 1)
	Exp -> '<' ident ':' ident Attributes . '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)
	Attributes -> Attributes . Attribute                (rule 7)

	ident          shift, and enter state 14
	'>'            shift, and enter state 15
	'/'            shift, and enter state 16

	Attribute      goto state 13

State 13

	Attributes -> Attributes Attribute .                (rule 7)

	ident          reduce using rule 7
	'>'            reduce using rule 7
	'/'            reduce using rule 7


State 14

	Attribute -> ident . '=' '"' ident '"'              (rule 5)

	'='            shift, and enter state 19


State 15

	Exp -> '<' ident ':' ident Attributes '>' . Exprs '<' ident ':' ident '/' '>'    (rule 2)

	'<'            reduce using rule 3

	Exprs          goto state 18

State 16

	Exp -> '<' ident ':' ident Attributes '/' . '>'     (rule 1)

	'>'            shift, and enter state 17


State 17

	Exp -> '<' ident ':' ident Attributes '/' '>' .     (rule 1)

	'<'            reduce using rule 1
	%eof           reduce using rule 1


State 18

	Exp -> '<' ident ':' ident Attributes '>' Exprs . '<' ident ':' ident '/' '>'    (rule 2)
	Exprs -> Exprs . Exp                                (rule 4)

	'<'            shift, and enter state 22

	Exp            goto state 21

State 19

	Attribute -> ident '=' . '"' ident '"'              (rule 5)

	'"'            shift, and enter state 20


State 20

	Attribute -> ident '=' '"' . ident '"'              (rule 5)

	ident          shift, and enter state 24


State 21

	Exprs -> Exprs Exp .                                (rule 4)

	'<'            reduce using rule 4


State 22

	Exp -> '<' . ident ':' ident Attributes '/' '>'     (rule 1)
	Exp -> '<' . ident ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)
	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' . ident ':' ident '/' '>'    (rule 2)

	ident          shift, and enter state 23


State 23

	Exp -> '<' ident . ':' ident Attributes '/' '>'     (rule 1)
	Exp -> '<' ident . ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)
	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident . ':' ident '/' '>'    (rule 2)

	':'            shift, and enter state 26


State 24

	Attribute -> ident '=' '"' ident . '"'              (rule 5)

	'"'            shift, and enter state 25


State 25

	Attribute -> ident '=' '"' ident '"' .              (rule 5)

	ident          reduce using rule 5
	'>'            reduce using rule 5
	'/'            reduce using rule 5


State 26

	Exp -> '<' ident ':' . ident Attributes '/' '>'     (rule 1)
	Exp -> '<' ident ':' . ident Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)
	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident ':' . ident '/' '>'    (rule 2)

	ident          shift, and enter state 27


State 27

	Exp -> '<' ident ':' ident . Attributes '/' '>'     (rule 1)
	Exp -> '<' ident ':' ident . Attributes '>' Exprs '<' ident ':' ident '/' '>'    (rule 2)
	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident ':' ident . '/' '>'    (rule 2)

	ident          reduce using rule 6
	'>'            reduce using rule 6
	'/'            shift, and enter state 28
			(reduce using rule 6)


	Attributes     goto state 12

State 28

	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident ':' ident '/' . '>'    (rule 2)

	'>'            shift, and enter state 29


State 29

	Exp -> '<' ident ':' ident Attributes '>' Exprs '<' ident ':' ident '/' '>' .    (rule 2)

	'<'            reduce using rule 2
	%eof           reduce using rule 2


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 8
Number of terminals: 7
Number of non-terminals: 5
Number of states: 30
